c4prj1_deck/grade.txt
Grading at Fri Aug 31 00:33:00 UTC 2018
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:249:16: error: invalid initializer
     card_t c = hand->cards[curr_match];
                ^
Compilation of eval.c failed

Overall Grade: F
